--- a/src/dit.css
+++ b/src/dit.css
@@ -4,7 +4,7 @@
     /* Light background */
     padding: 20px;
     border-radius: 10px;
-    margin: 20px;
+    margin-top: 10vh;
 }
 
 /* Fix the size of the preview video */
@@ -12,11 +12,14 @@
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
-    margin-top: 15vh;
+    width: 100%;
+    margin-top: 10vh;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .preview-video {
-    width: 80%;
+    width: 50%;
     height: 40vh;
     border-radius: 10px;
 }
@@ -63,4 +66,11 @@
     margin-top: 10px;
     font-size: 16px;
     
+}
+
+@media (max-width:760px) {
+    .ideo-preview {
+        width: 90%;
+        background-color: blue;
+    }
 }
