--- a/src/body1.css
+++ b/src/body1.css
@@ -1,194 +1,151 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .body1 {
-  height: 75vh;
-  width: 100%;
-  /* background-color: blue; */
   position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  width: 100%;
+  height: 75vh;
+  overflow: hidden;
 }
 
 .img {
   width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+  height: 100%;
+  object-fit: cover;
 }
 
 .whiteBox {
-  width: 35%;
-  height: 40vh;
-  box-shadow: 3px 3px 10px gray;
-  background-color: white;
   position: absolute;
-  top: 40%;
-  left: 21%;
+  top: 50%;
+  left: 10%;
+  transform: translateY(-50%);
+  background-color: white;
   padding: 20px 30px;
-  transform: translate(-50%, -50%);
+  width: 35%;
+  box-shadow: 3px 3px 10px gray;
+  z-index: 2;
 }
 
 .you {
   font-size: 38px;
   font-weight: 700;
   line-height: 48px;
+  color: #2d2f31;
 }
 
 .skills {
   font-size: 19px;
   font-weight: 400;
   line-height: 26px;
+  margin-top: 10px;
+  color: #2d2f31;
 }
 
 .dismis {
-  width: 96%;
-  height: 15vh;
-  background-color: rgb(45, 47, 49);
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 20px;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
-  /* justify-content: ; */
-  padding: 0 30px;
+  background-color: #2d2f31;
+  color: white;
+  padding: 20px 30px;
+  margin: 0 auto;
+  width: 96%;
 }
 
 .training {
-  width: 75%;
-  height: 50%;
+  flex: 1 1 60%;
   font-size: 16px;
   font-weight: 700;
-  line-height: 19.2px;
-  color: rgb(255, 255, 255);
-  display: flex;
-  align-items: center;
 }
 
 .buttonBox {
-  width: 25%;
-  height: 100%;
-  /* background-color: blue; */
+  flex: 1 1 40%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
+  gap: 10px;
 }
 
-.button1 {
-  width: 65%;
-  height: 50%;
-  background-color: white;
+.button1,
+.button2 {
+  padding: 10px 16px;
   font-size: 14px;
   font-weight: 700;
-  line-height: 16.8px;
-  color: rgb(45, 47, 49);
+  cursor: pointer;
   border: none;
 }
 
-.button2 {
-  width: 30%;
-  height: 50%;
-  background-color: black;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 16.8px;
-  color: white;
-  border: solid 1px white;
+.button1 {
+  background-color: white;
+  color: #2d2f31;
 }
 
-.learn {
-  width: 100%;
-  height: 15vh;
-  /* background-color: brown; */
-  font-size: 32px;
-  font-weight: 700;
-  line-height: 40px;
-  color: rgb(45, 47, 49);
-  padding: 20px 30px;
-  display: flex;
-  justify-content: first baseline;
-  font-family: "Times New Roman", Times, serif;
+.button2 {
+  background-color: black;
+  color: white;
+  border: 1px solid white;
+}
+
+@media (max-width: 1024px) {
+  .whiteBox {
+    width: 50%;
+    left: 5%;
+  }
+}
+
+@media (max-width: 480px) {
+  .you {
+    font-size: 18px;
+  }
+
+  .skills {
+    font-size: 12px;
+  }
+
+  .button1,
+  .button2 {
+    width: 100%;
+  }
+
+  .buttonBox {
+    flex-direction: column;
+    width: 100%;
+  }
 }
 
 @media (max-width: 768px) {
   .whiteBox {
-    height: auto;
-    top: 40%;
-    left: 21%;
-    padding: 3px 10px;
-    transform: translate(-50%, -50%);
+    position: static !important;
+    transform: none !important;
+    width: 90% !important;
+    margin: 20px auto !important;
+    padding: 16px;
+  }
+
+  .body1 {
+    margin-top: 13.35vh;
+
+    height: auto !important;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .img {
+    width: 100%;
+    height: auto !important;
+    object-fit: cover;
   }
 
   .you {
-    font-size: 10px;
-    font-weight: 500;
-    line-height: 16px;
+    font-size: 24px;
+    line-height: 30px;
   }
 
   .skills {
-    font-size: 8px;
-    line-height: 12px;
-  }
-
-  .body1 {
-    height: 18vh;
-  }
-
-  .dismis {
-    width: 96%;
-    height: auto;
-    padding-left: 10px;
-  }
-
-  .training {
-    margin-top: 10px;
-    font-size: 10px;
-    font-weight: 500;
-    line-height: 16.2px;
-  }
-
-  .button1 {
-    width: 75%;
-    font-size: 8px;
-    font-weight: 400;
-    line-height: 10.8px;
-    height: 80%;
-  }
-
-  .buttonBox {
-    width: 40%;
-    gap: 2px;
-  }
-
-  .button2 {
-    font-size: 8px;
-    height: 70%;
-    font-weight: 400;
-    line-height: 10.8px;
-  }
-
-  .learn {
-    width: 100%;
-    height: 6vh;
-    font-size: 16px;
-    font-weight: 700;
+    font-size: 14px;
     line-height: 20px;
-    color: rgb(45, 47, 49);
-    padding: 10px 15px;
-  }
-}
-
-@media (max-width: 768px) {
-  .body1 {
-    margin-top: 13.5vh;
-  }
-}
-
-@media (max-width: 380px) {
-  .body1 {
-    margin-top: 13.5vh;
   }
 }
