--- a/src/subcategory.css
+++ b/src/subcategory.css
@@ -144,7 +144,7 @@
 
 .category3 {
   width: 28%;
-  height: 60vh;
+  height: auto;
   background-color: white;
   color: black;
   box-shadow: 1px 1px 5px gray;
@@ -456,10 +456,21 @@
 .ppp {
   padding-left: 1vw;
 }
+.paystack-button {
+  padding: 12px 28px !important;
+  background-color: rgb(45, 47, 49) !important;
+  color: #fff !important;
+  font-size: 15px !important;
+  font-weight: 600 !important;
+  border: none !important;
+  border-radius: 8px !important;
+  cursor: pointer !important;
+  transition: background 0.3s ease !important;
+}
 
 .videocon3 {
   width: 100%;
-  height: 70%;
+  height: 40vh;
   display: flex;
   gap: 0.5rem;
   align-items: center;
@@ -604,6 +615,8 @@
   }
 
   .category {
+    display: flex;
+    flex-direction: column-reverse;
     height: 15%;
     padding: 0 5px 20px 30px;
   }
@@ -639,7 +652,7 @@
   }
 
   .category3 {
-    height: 35vh;
+    height: auto;
     width: 32%;
     padding: 0;
     top: 5%;
